fix: swipe-action button height overflow

--- a/components/swipe-action/style/index.less
+++ b/components/swipe-action/style/index.less
@@ -33,8 +33,8 @@
 
   &-actions {
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 1PX;
+    bottom: 1PX;
     display: flex;
     overflow: hidden;
     white-space: nowrap;
